// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animal@2 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 32685,
  "drawing": "9e8e931edbb32515",
  "lipGapPx": 82.45,
  "mesh": "2074d7c28e448967",
}
`;

exports[`animal@2 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 32602,
  "drawing": "ae2257891b72ed1a",
  "lipGapPx": 1.14,
  "mesh": "67a0854c270bb73b",
}
`;

exports[`animal@2 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 32685,
  "drawing": "4f4a7ab17778c1fd",
  "lipGapPx": 40.55,
  "mesh": "80e57ee84f11741f",
}
`;

exports[`animal@2 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 32685,
  "drawing": "92d66b6781482039",
  "lipGapPx": 126.24,
  "mesh": "3746e9ab9d477704",
}
`;

exports[`animal@2 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32750,
  "drawing": "a241347b937104d0",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`animal@2 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 32685,
  "drawing": "8b23d9ccfa558e09",
  "lipGapPx": 93.08,
  "mesh": "915c1a0f6f0fffc3",
}
`;

exports[`animal@2 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32602,
  "drawing": "274cd20f3960c7e7",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`animal@2 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 32783,
  "drawing": "04d0db96fdbf951b",
  "lipGapPx": 82.45,
  "mesh": "2074d7c28e448967",
}
`;

exports[`animal@2 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 32602,
  "drawing": "ae2257891b72ed1a",
  "lipGapPx": 1.14,
  "mesh": "67a0854c270bb73b",
}
`;

exports[`animal@2 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 32783,
  "drawing": "3af1fb21c3276c6c",
  "lipGapPx": 40.55,
  "mesh": "80e57ee84f11741f",
}
`;

exports[`animal@2 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 32783,
  "drawing": "4f3bf82db78d0277",
  "lipGapPx": 126.24,
  "mesh": "3746e9ab9d477704",
}
`;

exports[`animal@2 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32762,
  "drawing": "951184a8f8068b88",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`animal@2 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 32783,
  "drawing": "679db765acb254f1",
  "lipGapPx": 93.08,
  "mesh": "915c1a0f6f0fffc3",
}
`;

exports[`animal@2 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32602,
  "drawing": "274cd20f3960c7e7",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`toon@1 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32729,
  "drawing": "4e95a9107eecafc6",
  "lipGapPx": 73,
  "mesh": "0040f6f02ee00d7b",
}
`;

exports[`toon@1 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 32688,
  "drawing": "279d81a7d6589719",
  "lipGapPx": 26.31,
  "mesh": "2b2dc910cdf755e5",
}
`;

exports[`toon@1 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32729,
  "drawing": "89b4a4541fbbaf50",
  "lipGapPx": 35.39,
  "mesh": "2d7472a1e6c3314c",
}
`;

exports[`toon@1 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32729,
  "drawing": "487d577e56938980",
  "lipGapPx": 109.91,
  "mesh": "9db745c85b884155",
}
`;

exports[`toon@1 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32750,
  "drawing": "a241347b937104d0",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`toon@1 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32729,
  "drawing": "a24cf1b9469675bc",
  "lipGapPx": 81.05,
  "mesh": "78b73d30c307dd08",
}
`;

exports[`toon@1 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32602,
  "drawing": "274cd20f3960c7e7",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`toon@1 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32840,
  "drawing": "66395ac461ea06d6",
  "lipGapPx": 73,
  "mesh": "0040f6f02ee00d7b",
}
`;

exports[`toon@1 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 32749,
  "drawing": "c0d1b483c46cc445",
  "lipGapPx": 26.31,
  "mesh": "2b2dc910cdf755e5",
}
`;

exports[`toon@1 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32840,
  "drawing": "957e638aed8cb84f",
  "lipGapPx": 35.39,
  "mesh": "2d7472a1e6c3314c",
}
`;

exports[`toon@1 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32840,
  "drawing": "f728dbe1101b50cb",
  "lipGapPx": 109.91,
  "mesh": "9db745c85b884155",
}
`;

exports[`toon@1 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32762,
  "drawing": "951184a8f8068b88",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;

exports[`toon@1 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32840,
  "drawing": "c385fb8f7dbf4f4b",
  "lipGapPx": 81.05,
  "mesh": "78b73d30c307dd08",
}
`;

exports[`toon@1 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32602,
  "drawing": "274cd20f3960c7e7",
  "lipGapPx": 0.83,
  "mesh": "0c67777b3363014d",
}
`;
